@@ -254,15 +254,15 @@ destroying the dialog if you wish to do so.
 
 Typical usage of this function might be:
 &amp;lt;informalexample&amp;gt;&amp;lt;programlisting&amp;gt;
-gint result = dialog.run();
+int result = dialog.run();
 switch (result)
 {
-case GTK_RESPONSE_ACCEPT:
-do_application_specific_something (&amp;lt;!-- --&amp;gt;);
-break;
+case Gtk::RESPONSE_ACCEPT:
+  do_application_specific_something ();
+  break;
 default:
-do_nothing_since_dialog_was_cancelled (&amp;lt;!-- --&amp;gt;);
-break;
+  do_nothing_since_dialog_was_cancelled ();
+  break;
 }
 &amp;lt;/programlisting&amp;gt;&amp;lt;/informalexample&amp;gt;
 
