@@ -1,5 +1,13 @@
 2007-11-05  Murray Cumming  <murrayc@murrayc.com>
 
+	* gtk/src/gtk_docs_override.xml: Made changes to the gtk_dialog_run() 
+	override to avoid strange markup in the generated HTML.
+	Bug #471143 (Andrew Medico)
+	* gtk/src/gtk_signals.defs: Corrected the GtkWidget:grab-broken-event 
+	definition to fix the build after my previous commit.
+
+2007-11-05  Murray Cumming  <murrayc@murrayc.com>
+
 	* gtk/src/widget.hg: Added the grab_broken_event signal 
 	(with no_default_handler, to preserve ABI).
 	Bug #473465 (Balazs Scheidler).
